# custom_ronex

./: .gitignore
custom_controllers/: CMakeLists.txt  controller_plugins.xml  package.xml
custom_controllers/include/custom_controllers/: custom_controller.hpp  spi_passthrough_controller.hpp
custom_controllers/src/: custom_controller.cpp
custom_protocol/: CMakeLists.txt  package.xml
custom_protocol/include/custom_protocol/: Custom_Ronex_Protocol_0x02000002_MYO_MOTOR.h
custom_ronex_driver/: 4Muscles.urdf  CMakeLists.txt  ethercat_device_plugin.xml  package.xml
custom_ronex_driver/include/custom_ronex_driver/: sr_spi_cr.hpp
custom_ronex_driver/launch/: 4muscles.launch  directController.launch
custom_ronex_driver/src/: sr_spi_cr.cpp
custom_ronex_interface/: CMakeLists.txt  package.xml
custom_ronex_interface/include/custom_ronex_interface/: custom_ronex_interface.h
custom_ronex_interface/src/: custom_ronex_interface.cpp
custom_ronex_msgs/: CMakeLists.txt  package.xml
custom_ronex_msgs/msg/: statusMessage.msg
custom_ronex_msgs/srv/: SetDebugMode.srv  SetState.srv
